fix profile image wrap issue

--- a/public/stylesheets/profiles/index.css
+++ b/public/stylesheets/profiles/index.css
@@ -10,6 +10,7 @@ section {
 .card-container {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   text-align: center;
   margin-top: -20px;
 }
@@ -66,13 +67,6 @@ section {
 
   h2 {
     font-size: 2rem;
-  }
-  
-  .card-container{
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    flex-wrap: wrap;
   }
   
   .card-container:hover .card-base{
